# face_reg_test

./: .env  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
app/: .env  entrypoint.sh  main.py
app/core/: config.py  db_helper.py  lifespan.py
app/core/mixins/: crud.py
app/core/schemas/: pagination.py
app/core/utils/: assign_user_roles.py  base_roles.py  dependencies.py  get_user_by_id.py  save_file.py
app/migrations/: env.py
app/models/: permission.py  quiz.py  user.py
app/models/association/: role_permissions_association.py  user_role_association.py
app/modules/auth/: router.py  schemas.py  services.py
app/modules/auth/utils/: jwt_utils.py
app/modules/permission/: router.py  schemas.py  services.py
app/modules/question/: router.py  schemas.py  services.py
app/modules/quiz/: router.py  schemas.py  services.py
app/modules/quiz/utils/: compare_faces.py
app/modules/result/: router.py  schemas.py  services.py
app/modules/role/: router.py  schemas.py  services.py
app/modules/user/: router.py  schemas.py  services.py
